fix: deprecated URL, unused imports, add PR template